<resources>
    <string name="app_name">Project 0 - My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="media_streamer">Spotify Streamer</string>
    <string name="super_duo1">Scores App</string>
    <string name="super_duo2">Library App</string>
    <string name="ant_terminator">Build It Bigger</string>
    <string name="materialize">XYZ Reader</string>
    <string name="capstone">Capstone: My own app</string>
    <string name="my_title">My Nanodegree Apps!</string>

    <string name="media_streamer_toast">This will launch my Spotify Streamer app!</string>
    <string name="super_duo1_toast">This will launch my Scores app!</string>
    <string name="super_duo2_toast">This will launch my Library app!</string>
    <string name="ant_terminator_toast">This will launch "Build it Bigger" app!</string>
    <string name="materialize_toast">This will launch my XYZ Reader app!</string>
    <string name="capstone_toast">This will launch Capstone app!</string>
</resources>
