<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffd9f3f9"
    style="@android:style/Holo.ButtonBar">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="#ff000000"
        android:text="@string/my_title" />

    <Button
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:text="@string/media_streamer"
        android:id="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:background="@android:color/holo_orange_dark"
        android:onClick="media_streamer_click_handler" />

    <Button
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:text="@string/super_duo1"
        android:id="@+id/button2"
        android:background="@android:color/holo_orange_dark"
        android:layout_alignStart="@+id/button4"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:onClick="super_duo1_click_handler" />

    <Button
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:text="@string/super_duo2"
        android:id="@+id/button3"
        android:background="@android:color/holo_orange_dark"
        android:layout_alignStart="@+id/button4"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:onClick="super_duo2_click_handler" />

    <Button
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:text="@string/ant_terminator"
        android:id="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:layout_alignParentTop="true"
        android:background="@android:color/holo_orange_dark"
        android:onClick="ant_terminator_click_handler" />

    <Button
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:text="@string/materialize"
        android:id="@+id/button5"
        android:background="@android:color/holo_orange_dark"
        android:layout_alignStart="@+id/button2"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:onClick="materialize_click_handler" />

    <Button
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_marginTop="360dp"
        android:background="@android:color/holo_red_dark"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:onClick="capstone_click_handler" />

</RelativeLayout>
